<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.jasonlat.ai</groupId>
  <artifactId>ai-ssh-terminal-server</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <!--        <version>3.4.3</version>-->
    <version>3.4.3</version>
    <!-- 3.4.3 -> 4.0.5  配合 SpringAi 2.0.0-M2使用 -->
  </parent>
  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spring-ai.version>1.1.0-M3</spring-ai.version>
    <!--     1.1.0-M3 -> 2.0.0-M2 -->
    <langchain4j.version>1.4.0</langchain4j.version>
    <postgresql.version>42.7.5</postgresql.version>
    <google.sdk.version>1.6.0</google.sdk.version>
    <!--      0.4.0 ->  1.0.0-rc.1 -->
  </properties>
  <developers>
    <developer>
      <name>jasonlat</name>
      <email>2148660566@qq.com</email>
      <organization>jasonlat-dot</organization>
      <organizationUrl>https://github.com/jasonlat-dot</organizationUrl>
    </developer>
  </developers>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>
  <repositories>
    <repository>
      <id>nexus-aliyun</id>
      <name>nexus-aliyun</name>
      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
      <releases/>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencyManagement>
    <dependencies>
      <!--        谷歌adk 偏向于制作agent  start -->
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk</artifactId>
        <version>${google.sdk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-dev</artifactId>
        <version>${google.sdk.version}</version>
      </dependency>
      <!--        谷歌 adk  end  -->
      <!--        谷歌ADK 和 SpringAI结合-->
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-spring-ai</artifactId>
        <version>${google.sdk.version}</version>
      </dependency>
      <!--            谷歌sdk简单样例-->
      <dependency>
        <groupId>com.google.adk.samples</groupId>
        <artifactId>google-adk-sample-helloworld</artifactId>
        <version>${google.sdk.version}</version>
      </dependency>
      <!--       谷歌ADK 和  langchain4j结合-->
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-contrib-langchain4j</artifactId>
        <version>0.2.0</version>
      </dependency>
      <!-- 定义spring ai的版本 spring ai 1.1.0 https://central.sonatype.com/artifact/org.springframework.ai/spring-ai-bom -->
      <dependency>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-bom</artifactId>
        <version>${spring-ai.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- https://github.com/spring-ai-community/spring-ai-agent-utils -->
      <dependency>
        <groupId>org.springaicommunity</groupId>
        <artifactId>spring-ai-agent-utils</artifactId>
        <version>0.4.2</version>
      </dependency>
      <!-- 定义 langchain4j的版本 langchain4j https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-bom -->
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-bom</artifactId>
        <version>${langchain4j.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- 引入 Spring Boot 3 兼容版本 -->
      <dependency>
        <groupId>org.mybatis</groupId>
        <artifactId>mybatis-spring</artifactId>
        <version>3.0.3</version>
      </dependency>

      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        <version>3.5.14</version>
        <exclusions>
          <!-- 排除旧版本 mybatis-spring -->
          <exclusion>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <!-- spring security 的密码加密依赖-->
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-crypto</artifactId>
        <version>5.7.7</version>
      </dependency>
      <!-- # 多数据源路由配置
                 # mysql 5.x driver-class-name: com.mysql.jdbc.Driver    mysql-connector-java 5.1.34
                 # mysql 8.x driver-class-name: com.mysql.cj.jdbc.Driver mysql-connector-java 8.0.22-->
      <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>8.0.22</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>fastjson</artifactId>
        <version>2.0.28</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.9</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>32.1.3-jre</version>
      </dependency>
      <dependency>
        <groupId>dom4j</groupId>
        <artifactId>dom4j</artifactId>
        <version>1.6.1</version>
      </dependency>
      <dependency>
        <groupId>com.thoughtworks.xstream</groupId>
        <artifactId>xstream</artifactId>
        <version>1.4.10</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt</artifactId>
        <version>0.9.1</version>
      </dependency>
      <dependency>
        <groupId>com.auth0</groupId>
        <artifactId>java-jwt</artifactId>
        <version>4.4.0</version>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.15</version>
      </dependency>
      <dependency>
        <groupId>jakarta.validation</groupId>
        <artifactId>jakarta.validation-api</artifactId>
        <version>3.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.26</version>
      </dependency>
      <dependency>
        <groupId>org.jeasy</groupId>
        <artifactId>easy-random-core</artifactId>
        <version>4.3.0</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-amqp</artifactId>
        <version>3.2.0</version>
      </dependency>
      <dependency>
        <groupId>io.gitee.li--jiaqiang</groupId>
        <artifactId>token-spring-boot-starter</artifactId>
        <version>1.3</version>
      </dependency>
      <dependency>
        <groupId>io.gitee.li--jiaqiang</groupId>
        <artifactId>redisson-spring-boot-starter</artifactId>
        <version>1.1</version>
      </dependency>
      <dependency>
        <groupId>io.gitee.li--jiaqiang</groupId>
        <artifactId>encrypt-spring-boot-starter</artifactId>
        <version>1.2</version>
      </dependency>
      <dependency>
        <groupId>com.jasonlat.dot</groupId>
        <artifactId>jasonlat-wrench-starter-design-framework</artifactId>
        <version>1.0</version>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/io.github.jasonlat-dot/ecc-encrypt-springboot-starter -->
      <dependency>
        <groupId>io.github.jasonlat-dot</groupId>
        <artifactId>ecc-encrypt-springboot-starter</artifactId>
        <version>1.1</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>com.jasonlat.dot</groupId>
        <artifactId>jasonlat-wrench-starter-design-framework</artifactId>
        <version>1.0</version>
      </dependency>

      <!-- SSH 连接库 -->
      <dependency>
        <groupId>com.jcraft</groupId>
        <artifactId>jsch</artifactId>
        <version>0.1.54</version>
      </dependency>

      <!-- 工程模块 -->
      <dependency>
        <groupId>com.jasonlat.ai</groupId>
        <artifactId>ai-ssh-terminal-server-domain</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.jasonlat.ai</groupId>
        <artifactId>ai-ssh-terminal-server-infrastructure</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.jasonlat.ai</groupId>
        <artifactId>ai-ssh-terminal-server-types</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.jasonlat.ai</groupId>
        <artifactId>ai-ssh-terminal-server-trigger</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.jasonlat.ai</groupId>
        <artifactId>ai-ssh-terminal-server-api</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <!-- maven 脚手架 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-archetype-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <outputDirectory>../ai-agent-scaffold-lite-archetype</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.7</version>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=test -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-ssh-terminal-server-boot -Xloggc:/export/Logs/ai-ssh-terminal-server-boot/gc-ai-ssh-terminal-server-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>dev</profileActive>
      </properties>
    </profile>
    <profile>
      <id>test</id>
      <properties>
        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=test -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-ssh-terminal-server-boot -Xloggc:/export/Logs/ai-ssh-terminal-server-boot/gc-ai-ssh-terminal-server-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>test</profileActive>
      </properties>
    </profile>
    <profile>
      <id>prod</id>
      <properties>
        <java_jvm>-Xms6G -Xmx6G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=release -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/fq-mall-activity-app -Xloggc:/export/Logs/ai-ssh-terminal-server-boot/gc-ai-ssh-terminal-server-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>prod</profileActive>
      </properties>
    </profile>
  </profiles>
  <modules>
    <module>ai-ssh-terminal-server-app</module>
    <module>ai-ssh-terminal-server-domain</module>
    <module>ai-ssh-terminal-server-trigger</module>
    <module>ai-ssh-terminal-server-infrastructure</module>
    <module>ai-ssh-terminal-server-types</module>
    <module>ai-ssh-terminal-server-api</module>
  </modules>
</project>
